--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:h2:~/junwei
 spring.datasource.username=xiaohua
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
 
